--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,200 +1,2 @@
-<!---
-<div class="jumbotron">
-  <h2>Yang Zhao's Homepage &#36213;&#38451; </h2>
-  <p>On the way to the sea and stars.</p> 
-</div>
--->
-
-<div class="container">
-<div class="jumbotron">
-  <h1 class="header">Welcome to Yang Zhao's Homepage</h1>
-
-
-<div class="left"><a target="_blank" href="http://www.microsoft.com"><IMG SRC="app/ms-logo-site-share.png" ALT="MS Logo" WIDTH=250
-	HEIGHT=250 X-SAS-UseImageWidth X-SAS-UseImageHeight ALIGN=bottom /></a>
-</div>
-
-<div class="content">
-<h1 class="header">&#36213;&#38451; Yang Zhao </h1>
-<!--
-<p></p>
-<h2>Microsoft</h2>
-<ul class="contact">
-<li><b>Email:</b> <span class="glyphicon glyphicon-envelope"></span></li>
-</ul>
--->
-<p></p>
-<p>I come from <a href="http://en.wikipedia.org/wiki/Xi%27an">Xi'an, Shaanxi</a>, China.</p>
-<p>Now I am working for Microsoft in Redmond, WA.</p> 
-<p>I graduated from UC Riverside in 2013. </p>
-<p>
-Email me: <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-envelope"></span></button>
-</p>
-</div>
-
-<!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
-  <div class="modal-dialog">
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Send Me a Mail</h4>
-      </div>
-      <div class="modal-body">
-        <form #mailForm="ngForm" (ngSubmit)="Submit(mailForm)" class="form-horizontal" id="mailForm" role="form">
-          <div>
-            <label for="name">Name:</label>
-            <input required ngModel name="name" #name="ngModel" id="name" type="text" class="form-control">
-            <div class="alert alert-danger" *ngIf="name.touched && !name.valid">Your name is required!</div>
-          </div>
-
-          <div>
-            <label for="email">Email:</label>
-            <input 
-              required 
-              ngModel name="email" 
-              #email="ngModel" 
-              id="email" 
-              type="text" 
-              class="form-control">
-            <div 
-              class="alert alert-danger" 
-              *ngIf="email.touched && !email.valid">
-              Your email is required!
-            </div>
-          </div>
-          
-          <div>
-            <label for="body">Body:</label>
-            <textarea ngModel name="body" #body="ngModel" cols="30" rows="10" id="body" class="form-control"></textarea>
-          </div>
-
-          <button class="btn btn-primary" [disabled]='!mailForm.valid'>Send</button>
-        </form>
-      </div>
-
-      <div class="modal-footer">
-          <label>Thank you for contacting me!</label>
-      </div>
-
-    </div>
-  </div>
-</div>
-
-</div>
-</div>
-
-<div class="container">
-<nav class="navbar navbar-default">
-  <ul class="nav navbar-nav navbar-left">
-      <li><a href="#work">Work Experience</a></li>
-      <li><a href="#education">Education</a></li>
-      <li><a href="#research">Research</a></li>
-      <li><a href="#personal">Personal</a></li>
-  </ul>
-</nav>
-</div>
-
-<!--
-<div class='container-fluid'>
-  <div id='content' class='row-fluid'>
-    <div class='col-sm-2 sidebar'>
-        <ul class="nav nav-tabs nav-stacked">
-          <li><a href="#work">Work Experience</a></li>
-          <li><a href="#education">Education</a></li>
-          <li><a href="#research">Research</a></li>
-          <li><a href="#personal">Personal</a></li>
-        </ul>
-    </div>
-
-    <div class='col-sm-10 main'>
-        <h2 class="index">Work Experience</h2>
-        <p>I am contributing to Failover Clustering in Windows Server. <a href="https://docs.microsoft.com/en-us/windows-server/failover-clustering/failover-clustering-overview">Learn the latest features in Windows Server 2016</a>.</p>
-
-        <p>Some features I contributed: </p>
-
-<h4>Health Service</h4>
-<ul>
-  <li></li>
-</ul>
-
-<h4>Hyper-converged Solution using Storage Spaces Direct</h4>
-<ul>
-  <li></li>
-</ul>
-    </div>
-  </div>
-</div>
--->
-
-<div class="container-fluid">
-<div>
-<a name="work">
-  <h2 class="index">Work Experience</h2>
-</a>
-<p>I am contributing to Failover Clustering in Windows Server. <a href="https://docs.microsoft.com/en-us/windows-server/failover-clustering/failover-clustering-overview">Learn the latest features in Windows Server 2016</a>.</p>
-
-<p>Some features I contributed: </p>
-
-<h4>Health Service</h4>
-<ul>
-  <li></li>
-</ul>
-</div>
-
-<h4>Hyper-converged Solution using Storage Spaces Direct</h4>
-<ul>
-  <li></li>
-</ul>
-
-<a name="work">
-<h2 class="index">Education</h2>
-</a>
-<ul>
-<li><b>Ph.D</b>  (Sep. 2008 - Aug. 2013): <b> <a
-href="http://www.cs.ucr.edu">Department of Computer Science &amp; Engineering</a>, <a href="http://www.ucr.edu">University of California, Riverside</a>,</b> U.S.</li>
-    <ul class="sec">
-    <li> <b>Advisor</b>: <a href="http://web.cs.iastate.edu/~ciardo/"> Prof. Gianfranco Ciardo </a></li>
-    <li> <b>Research</b>: Symbolic model checking for asynchronous systems, Probabilistic model checking, Petri net systems</li>
-    <li> <b>Thesis</b>: <i>Bridging the Gap Between Logic and Probabilistic Model Checking</i></li>
-    </ul>
-<li><b>M.S.</b> (Sep. 2005 - Jul. 2008): <b> <a
-href="http://www.ict.ac.cn/">Institute of Computing Technology</a>,
-<a href="http://www.cas.ac.cn/">Chinese Academy of Sciences</a></b>,
-Beijing, China
-    <ul class="sec">
-    <li> <b>Advisor</b>: <a href="http://test.ict.ac.cn/site/sites/www/2284816204540/content.fdp?contentId=2284816204544"> Prof. Xiaowei Li </a></li>
-    <li> <b>Research</b>: Hardware verification, SAT and its applications in formal verification, coverage-driven test generation for RTL designs, 
-	<a href="previous_publication.html">previous publications</a></li>
-    <li> <b>Thesis</b>: <i>Formal Verification Techniques Based on Satisfiability</i></li>
-    </ul>
-</li>
-<li><b>B.S.</b> (Sep. 2001 - Jul. 2005): <b> <a
-href="http://eecs.pku.edu.cn/">Department of Electronics</a>,
-<a href="http://www.pkucn-edu.com">Peking University</a></b>,
-Beijing, China</li>
-    <ul class="sec">
-    <li> <b>Minor</b>: Mathematics, School of Mathematics, Peking University</li>
-    </ul>
-</ul>
-
-<a name="research">
-<h2 class="index">Research</h2>
-</a>
-<ul>
-<li> Multi-valued decision diagrams (MDD), asynchronous systems verification and testing</li>
-<li> Symbolic model checking for asynchronous systems</li>
-<li> Probabilistic model checking</li>
-</ul>
-
-<a name="personal">
-<h2 class="index">Personal</h2>
-</a>
-<ul>
-<li> <a href="http://www.douban.com">My favorate site for movies and musics</a> (in Chinese) </li>
-<li> <a href="http://www.lifeacademy.com.tw">Life Academy: the manual for our lives</a> (in Chinese) </li>
-<li> I love writing essays, <a href="http://sites.google.com/site/happyyangzhao/">here</a> is my best selection (in Chinese).</li>
-</ul>
-
-</div>
+<navbar></navbar>
+<router-outlet></router-outlet>
