--- a/src/app/EducationPage/EducationPage.component.html
+++ b/src/app/EducationPage/EducationPage.component.html
@@ -1,3 +1,4 @@
+<div class="container">
     <h2 class="index">Education</h2>
 
     <ul>
@@ -27,4 +28,4 @@
         <li> <b>Minor</b>: Mathematics, School of Mathematics, Peking University</li>
         </ul>
     </ul>
-  
+</div>  
