--- a/src/app/HomePage/HomePage.component.html
+++ b/src/app/HomePage/HomePage.component.html
@@ -1,8 +1,9 @@
-<div class="left"><a target="_blank" href="http://www.microsoft.com"><IMG SRC="app/ms-logo-site-share.png" ALT="MS Logo" WIDTH=250
-	HEIGHT=250 X-SAS-UseImageWidth X-SAS-UseImageHeight ALIGN=bottom /></a>
-</div>
+<div class="container">
+  <div class="left"><a target="_blank" href="http://www.microsoft.com"><IMG SRC="app/ms-logo-site-share.png" ALT="MS Logo" WIDTH=250
+	  HEIGHT=250 X-SAS-UseImageWidth X-SAS-UseImageHeight ALIGN=bottom /></a>
+  </div>
   
-<div class="content">
+  <div class="content">
     <h1 class="header">&#36213;&#38451; Yang Zhao </h1>
     <p></p>
     <p>I come from <a href="http://en.wikipedia.org/wiki/Xi%27an">Xi'an, Shaanxi</a>, China.</p>
@@ -11,7 +12,7 @@
     <p>
     Email me: <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-envelope"></span></button>
     </p>
-</div>
+  </div>
     
     <!-- Modal -->
     <div id="myModal" class="modal fade" role="dialog">
@@ -64,3 +65,4 @@
           </div>
         </div>
       </div>
+</div>
