--- a/src/app/PersonalPage/PersonalPage.component.html
+++ b/src/app/PersonalPage/PersonalPage.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <h2 class="index">Personal</h2>
 
 <ul>
@@ -5,3 +6,4 @@
     <li> <a href="http://www.lifeacademy.com.tw">Life Academy: the manual for our lives</a> (in Chinese) </li>
     <li> I love writing essays, <a href="http://sites.google.com/site/happyyangzhao/">here</a> is my best selection (in Chinese).</li>
 </ul>
+</div>
