--- a/src/app/ResearchPage/ResearchPage.component.html
+++ b/src/app/ResearchPage/ResearchPage.component.html
@@ -1,3 +1,4 @@
+<div class="container">
     <h2 class="index">Research</h2>
 
     <ul>
@@ -5,4 +6,5 @@
     <li> Symbolic model checking for asynchronous systems</li>
     <li> Probabilistic model checking</li>
     </ul>
+</div>
     
