--- a/src/app/WorkPage/WorkPage.component.html
+++ b/src/app/WorkPage/WorkPage.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
   <h2 class="index">Work Experience</h2>
 
   <p>I am contributing to Failover Clustering in Windows Server. <a href="https://docs.microsoft.com/en-us/windows-server/failover-clustering/failover-clustering-overview">Learn the latest features in Windows Server 2016</a>.</p>
