--- a/src/app/PersonalPage/PersonalPage.component.html
+++ b/src/app/PersonalPage/PersonalPage.component.html
@@ -1,6 +1,18 @@
 <div class="container">
 <h2 class="index">Personal</h2>
 
+<p>
+ I married Xiaoquan on September 8, 2012. Here are some pictures.<br />
+<embed 
+    type="application/x-shockwave-flash" 
+    src="https://picasaweb.google.com/s/c/bin/slideshow.swf" 
+    width="400" 
+    height="267" 
+    flashvars="host=picasaweb.google.com&hl=en_US&feat=flashalbum&RGB=0x000000&feed=https%3A%2F%2Fpicasaweb.google.com%2Fdata%2Ffeed%2Fapi%2Fuser%2F100667838539420147041%2Falbumid%2F5792161099410080017%3Falt%3Drss%26kind%3Dphoto%26authkey%3DGv1sRgCK7Yn4KutOPr4QE%26hl%3Den_US"
+    pluginspage="http://www.macromedia.com/go/getflashplayer"
+    />
+</p>
+
 <ul>
     <li> <a href="http://www.douban.com">My favorate site for movies and musics</a> (in Chinese) </li>
     <li> <a href="http://www.lifeacademy.com.tw">Life Academy: the manual for our lives</a> (in Chinese) </li>
