--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,9 +1,9 @@
   .jumbotron {
     height: 200px;
-    color: #00070A;
+    color: #EEEEEE;
     text-shadow: #444 0 1px 1px;
     background:transparent;
-    background-image: url("../../assets/whiteboard.jpg");
+    background-image: url("../../assets/subway.jpg");
     background-size: cover;
   }
   
